--- a/package.json
+++ b/package.json
@@ -1,12 +1,24 @@
 {
-  "name": "greet",
+  "name": "bosswee-greet",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "./lib/index.js",
+  "bin": {
+    "greet": "./bin/greet.js"
+  },
   "scripts": {
+    "build": "babel src --out-dir lib",
+    "watch": "babel src --out-dir lib --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "bosswee",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "minimist": "^1.2.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.6.4",
+    "babel-preset-es2015": "^6.6.0"
+  }
 }
